--- a/audio_record_vue.html
+++ b/audio_record_vue.html
@@ -13,7 +13,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
     <script>
-
+        // just comment
         new Vue({
             el: '#app',
             data: {
